unpackaged/main/default/objects/Contact/fields/Account_Lease_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Lease_Status__c</fullName>
    <description>This is a formula field that will bring the account lease status into the Contact object for campaign lists.</description>
    <formula>TEXT( Account.Status_Lease__c )</formula>
    <inlineHelpText>This is a formula field that will bring the account lease status into the Contact object for campaign lists.</inlineHelpText>
    <label>Account - Lease Status</label>
    <type>Text</type>
</CustomField>