unpackaged/main/default/objects/Contact/fields/Assistant_Email__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Email__c</fullName>
    <description>This field will capture a secondary email address number for an associate of the customer.</description>
    <inlineHelpText>Enter a email address for a secondary contact.</inlineHelpText>
    <label>Asst. Email</label>
    <type>Email</type>
</CustomField>