unpackaged/main/default/objects/Contact/fields/Bankruptcy_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Discharge_Date__c</fullName>
    <label>Bankruptcy Discharge Date</label>
    <type>Date</type>
</CustomField>