unpackaged/main/default/objects/Contact/fields/Bankruptcy_Type__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Type__c</fullName>
    <label>Bankruptcy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>