unpackaged/main/default/objects/Contact/fields/Broker_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Company_Name__c</fullName>
    <label>Broker Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>