unpackaged/main/default/objects/Contact/fields/Broker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Broker_Phone__c</fullName>
    <label>Broker Phone</label>
    <type>Phone</type>
</CustomField>