unpackaged/main/default/objects/Contact/fields/Broker_Website__c.field-meta.xml
<CustomField>
    <fullName>Broker_Website__c</fullName>
    <label>Broker Website</label>
    <type>Url</type>
</CustomField>