unpackaged/main/default/objects/Contact/fields/BRS_Score__c.field-meta.xml
<CustomField>
    <fullName>BRS_Score__c</fullName>
    <description>Bankruptcy Risk Score</description>
    <inlineHelpText>Bankruptcy Risk Score</inlineHelpText>
    <label>BRS Score</label>
    <length>16</length>
    <type>Text</type>
</CustomField>