unpackaged/main/default/objects/Contact/fields/Calendar_Clerk_Phone__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Clerk_Phone__c</fullName>
    <description>Legal Field - phone number for the calendar clerk of the judge a case is with.</description>
    <label>Calendar Clerk Phone #</label>
    <type>Phone</type>
</CustomField>