unpackaged/main/default/objects/Contact/fields/Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Call_Count__c</fullName>
    <description>Number of Calls to Customer</description>
    <label>Call Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>