unpackaged/main/default/objects/Contact/fields/Clerk_Phone__c.field-meta.xml
<CustomField>
    <fullName>Clerk_Phone__c</fullName>
    <description>Legal Field - phone number for the clerk of the judge a case is with.</description>
    <label>Clerk Phone #</label>
    <type>Phone</type>
</CustomField>