unpackaged/main/default/objects/Contact/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Broker Comments</label>
    <length>32072</length>
    <type>LongTextArea</type>
</CustomField>