unpackaged/main/default/objects/Contact/fields/ContactID18__c.field-meta.xml
<CustomField>
    <fullName>ContactID18__c</fullName>
    <description>The full Contact ID needed for external applications that interface with SalesForce</description>
    <inlineHelpText>The full Contact ID needed for external applications that interface with SalesForce</inlineHelpText>
    <label>ContactID18</label>
    <length>18</length>
    <type>Text</type>
</CustomField>