unpackaged/main/default/objects/Contact/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <description>Credit score of contact.</description>
    <inlineHelpText>Credit score of contact.</inlineHelpText>
    <label>Credit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>