unpackaged/main/default/objects/Contact/fields/Credit_Score_Direction__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Direction__c</fullName>
    <description>This field will indicate if a contact's credit score has gone up or down or no change was present.  This field is a formula and cannot be edited.</description>
    <formula>IF( FICO_Score__c  &gt;    VALUE(OLD_CREDIT_SCORE__c)  ,"UP",  IF(FICO_Score__c   &lt;   VALUE(OLD_CREDIT_SCORE__c) , "Down",  IF(FICO_Score__c  =  VALUE(OLD_CREDIT_SCORE__c) , "No Change",  IF( AND(OLD_CREDIT_SCORE__c =  "", FICO_Score__c   &gt; 0) , "New Score", "No Score") ) ) )</formula>
    <inlineHelpText>This field will indicate if a contact's credit score has gone up or down or no change was present.  This field is a formula and cannot be edited.</inlineHelpText>
    <label>Credit Score Direction</label>
    <type>Text</type>
</CustomField>