unpackaged/main/default/objects/Contact/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <description>IF(Related_Credit_Score__c == null,IF(Original_Credit_Score_ID__c == null,'Credit Not Ran',HYPERLINK('file://s29/CreditRpts/'+Original_Credit_Score_ID__c+'.txt','View Full Report','_blank')),HYPERLINK('file://s29/CreditRpts/'+CASESAFEID(Related_Credit_Score__c)+'.txt','View Full Report','_blank'))</description>
    <formula>IF(Related_Credit_Score__c == null,IF(Original_Credit_Score_ID__c == null,'Credit Not Ran',HYPERLINK('file://s29/CreditRpts/'+Original_Credit_Score_ID__c+"-"+"1"+'.txt','View Full Report','_blank')),HYPERLINK('file://s29/CreditRpts/'+CASESAFEID(Related_Credit_Score__c)+'.txt','View Full Report','_blank'))</formula>
    <inlineHelpText>Jody's old formula above</inlineHelpText>
    <label>Credit Status</label>
    <type>Text</type>
</CustomField>