unpackaged/main/default/objects/Contact/fields/Db_Rating__c.field-meta.xml
<CustomField>
    <fullName>Db_Rating__c</fullName>
    <description>Dun &amp; Bradstreet Rating</description>
    <inlineHelpText>Dun &amp; Bradstreet Rating</inlineHelpText>
    <label>Db Rating</label>
    <length>16</length>
    <type>Text</type>
</CustomField>