unpackaged/main/default/objects/Contact/fields/Deal_Volume_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Deal_Volume_Per_Month__c</fullName>
    <label>Deal Volume Per Month ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>