unpackaged/main/default/objects/Contact/fields/Department_Number__c.field-meta.xml
<CustomField>
    <fullName>Department_Number__c</fullName>
    <description>Legal field for Department Number</description>
    <label>Department Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>