unpackaged/main/default/objects/Contact/fields/DLP_Link__c.field-meta.xml
<CustomField>
    <fullName>DLP_Link__c</fullName>
    <formula>IF(ISBLANK(Encrypted_Email_String__c),"",
IF(
AND(
NOT(ISBLANK(Account.NF_Renewal_Rep__c)), 
INCLUDES(Account.NF_Renewal_Rep__r.Available_Brands__c,'Quick Bridge')
   ),
"https://my.quickbridge.com/?payload=" + Encrypted_Email_String__c, 
IF(
AND(
ISBLANK(Account.NF_Renewal_Rep__c),
INCLUDES(Owner.Available_Brands__c,'Quick Bridge')
    ),
"https://my.quickbridge.com/?payload=" + Encrypted_Email_String__c, "https://my.nationalfunding.com/?payload=" + Encrypted_Email_String__c
)))</formula>
    <label>DLP Link</label>
    <type>Text</type>
</CustomField>