unpackaged/main/default/objects/Contact/fields/Do_Not_Fax_Formula__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Fax_Formula__c</fullName>
    <description>This is a formula field to feed a workflow from Account to Contact.  This will update the Fax Opt Out field on the Contact if the Account "Do Not Fax" field is True.</description>
    <formula>IF( Account.Do_Not_Fax__c = True, "Yes", "No")</formula>
    <inlineHelpText>This is a formula field to feed a workflow from Account to Contact.  This will update the Fax Opt Out field on the Contact if the Account "Do Not Fax" field is True.</inlineHelpText>
    <label>Do Not Fax - Formula</label>
    <type>Text</type>
</CustomField>