unpackaged/main/default/objects/Contact/fields/Donotmail__c.field-meta.xml
<CustomField>
    <fullName>Donotmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Mail</description>
    <inlineHelpText>Check box if customer opts not to receive mail solication.</inlineHelpText>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>