unpackaged/main/default/objects/Contact/fields/Email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_2__c</fullName>
    <inlineHelpText>Secondary email for the Contact</inlineHelpText>
    <label>Email 2</label>
    <type>Email</type>
</CustomField>