unpackaged/main/default/objects/Contact/fields/Encrypted_Email_String_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Email_String_Refresh_Date__c</fullName>
    <label>Encrypted Email String Refresh Date</label>
    <type>Date</type>
</CustomField>