unpackaged/main/default/objects/Contact/fields/FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>FICO_Score__c</fullName>
    <description>This field displays this contact's most recently updated credit score.</description>
    <inlineHelpText>This field displays this contact's most recently updated credit score.</inlineHelpText>
    <label>FICO Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>