unpackaged/main/default/objects/Contact/fields/Financial_Stress_Score__c.field-meta.xml
<CustomField>
    <fullName>Financial_Stress_Score__c</fullName>
    <description>This is the Account's Financial Stress Score. This is a formula field and not editable.</description>
    <formula>Account.Financial_Stress_Score__c</formula>
    <inlineHelpText>This is the Account's Financial Stress Score. This is a formula field and not editable.</inlineHelpText>
    <label>Financial Stress Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>