unpackaged/main/default/objects/Contact/fields/Funded_WC_Deals__c.field-meta.xml
<CustomField>
    <fullName>Funded_WC_Deals__c</fullName>
    <description>This field will indicate how many funded deals are related to this customer's account.</description>
    <formula>Account.Merchant_Opportunities_Funded__c + Account.Broker_Opportunities_Funded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will indicate how many funded deals are related to this customer's account.</inlineHelpText>
    <label>Funded WC Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>