unpackaged/main/default/objects/Contact/fields/Home_Owner__c.field-meta.xml
<CustomField>
    <fullName>Home_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will capture if the customer is a home owner.</description>
    <inlineHelpText>Check this box if the customer is a home owner.</inlineHelpText>
    <label>Home Owner</label>
    <type>Checkbox</type>
</CustomField>