unpackaged/main/default/objects/Contact/fields/HomePhone_Trim__c.field-meta.xml
<CustomField>
    <fullName>HomePhone_Trim__c</fullName>
    <externalId>true</externalId>
    <label>HomePhone Trim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>