unpackaged/main/default/objects/Contact/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <length>128</length>
    <type>Text</type>
</CustomField>