unpackaged/main/default/objects/Contact/fields/Invalid_email__c.field-meta.xml
<CustomField>
    <fullName>Invalid_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid email</label>
    <type>Checkbox</type>
</CustomField>