unpackaged/main/default/objects/Contact/fields/Invalid_Fax__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Fax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Fax</label>
    <type>Checkbox</type>
</CustomField>