unpackaged/main/default/objects/Contact/fields/Invalid_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Mobile_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will be checked in the contacts Mobile phone is invalid.</description>
    <inlineHelpText>Check this box if the contacts Mobile phone is invalid.</inlineHelpText>
    <label>Invalid Mobile Phone</label>
    <type>Checkbox</type>
</CustomField>