unpackaged/main/default/objects/Contact/fields/Is_Marketing_Sync_Different__c.field-meta.xml
<CustomField>
    <fullName>Is_Marketing_Sync_Different__c</fullName>
    <description>This field is used to check if Marketing_Cloud_Sync_Eligible__c and  Marketing_Sync__c values are different. This is further used in flow for Marketing Sync</description>
    <formula>Marketing_Cloud_Sync_Eligible__c &lt;&gt; Marketing_Sync__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Marketing Sync Different</label>
    <type>Checkbox</type>
</CustomField>