unpackaged/main/default/objects/Contact/fields/Isprimary__c.field-meta.xml
<CustomField>
    <fullName>Isprimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary Contact</description>
    <inlineHelpText>Check box if contact is designated as primary .</inlineHelpText>
    <label>Isprimary</label>
    <type>Checkbox</type>
</CustomField>