unpackaged/main/default/objects/Contact/fields/Judge__c.field-meta.xml
<CustomField>
    <fullName>Judge__c</fullName>
    <formula>IF(INCLUDES( advpm__Type__c , "Judge"), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judge</label>
    <type>Checkbox</type>
</CustomField>