unpackaged/main/default/objects/Contact/fields/Last_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Disposition__c</fullName>
    <description>Results of Last Call to this Account - from Log A Call Disposition</description>
    <inlineHelpText>Results of Last Call to this Account - from Log A Call Disposition</inlineHelpText>
    <label>Last Call Disposition</label>
    <length>40</length>
    <type>Text</type>
</CustomField>