unpackaged/main/default/objects/Contact/fields/Last_Comma_Space_First__c.field-meta.xml
<CustomField>
    <fullName>Last_Comma_Space_First__c</fullName>
    <formula>LastName &amp; ", " &amp;  FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Comma Space First</label>
    <type>Text</type>
</CustomField>