unpackaged/main/default/objects/Contact/fields/Last_Opt_In_Message_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Opt_In_Message_Sent__c</fullName>
    <description>Date/Time of the last time an Opt-In Message was sent</description>
    <inlineHelpText>Date/Time of the last time an Opt-In Message was sent</inlineHelpText>
    <label>Last Opt In Message Sent</label>
    <type>DateTime</type>
</CustomField>