unpackaged/main/default/objects/Contact/fields/Marketing_Prescreen_Score__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Prescreen_Score__c</fullName>
    <description>This is the Account's Marketing Prescreen Score. This is a formula field and not editable.</description>
    <formula>TEXT(Account.Marketing_Prescreen_Score__c)</formula>
    <inlineHelpText>This is the Account's Marketing Prescreen Score. This is a formula field and not editable.</inlineHelpText>
    <label>Marketing Prescreen Score</label>
    <type>Text</type>
</CustomField>