unpackaged/main/default/objects/Contact/fields/Marketing_Sync__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will help determine whether a Lead/Contact should be synced to Marketing cloud</description>
    <label>Marketing Sync</label>
    <type>Checkbox</type>
</CustomField>