unpackaged/main/default/objects/Contact/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <description>Nickname of FPC_Contact</description>
    <inlineHelpText>Type in the nickname of the contact.</inlineHelpText>
    <label>Nickname</label>
    <length>128</length>
    <type>Text</type>
</CustomField>