unpackaged/main/default/objects/Contact/fields/OLD_CREDIT_SCORE__c.field-meta.xml
<CustomField>
    <fullName>OLD_CREDIT_SCORE__c</fullName>
    <description>Records past credit scores of the contact</description>
    <inlineHelpText>Records past credit scores of the contact</inlineHelpText>
    <label>Old Credit Score</label>
    <length>16</length>
    <type>Text</type>
</CustomField>