unpackaged/main/default/objects/Contact/fields/Original_Credit_Score_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Credit_Score_ID__c</fullName>
    <label>Original Credit Score ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>