unpackaged/main/default/objects/Contact/fields/Ownership_DS__c.field-meta.xml
<CustomField>
    <fullName>Ownership_DS__c</fullName>
    <description>Populated by workflow to</description>
    <label>Ownership DS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>