unpackaged/main/default/objects/Contact/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <description>Percentage of Ownership that FPC_Contact has.</description>
    <inlineHelpText>Type in the percentage of ownership that contact has in company.</inlineHelpText>
    <label>Ownership %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>