unpackaged/main/default/objects/Contact/fields/Pardot_DLP_Drip_Catch_Up__c.field-meta.xml
<CustomField>
    <fullName>Pardot_DLP_Drip_Catch_Up__c</fullName>
    <description>This is a temporary field used in DLP used in the conversion from SF Drip to Pardot Drip.</description>
    <label>Pardot DLP Drip Catch Up</label>
    <type>Date</type>
</CustomField>