unpackaged/main/default/objects/Contact/fields/Paydex_Band__c.field-meta.xml
<CustomField>
    <fullName>Paydex_Band__c</fullName>
    <description>This is the Account's Paydex Band. This is a formula field and not editable.</description>
    <formula>Account.Paydex_Band__c</formula>
    <inlineHelpText>This is the Account's Paydex Band. This is a formula field and not editable.</inlineHelpText>
    <label>Paydex Band</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>