unpackaged/main/default/objects/Contact/fields/Person_Score__c.field-meta.xml
<CustomField>
    <fullName>Person_Score__c</fullName>
    <description>Marketo Scoring Field.</description>
    <label>Person Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>