unpackaged/main/default/objects/Contact/fields/Pref_Language__c.field-meta.xml
<CustomField>
    <fullName>Pref_Language__c</fullName>
    <description>Language Preference</description>
    <inlineHelpText>Select the language preference if not ENGLISH</inlineHelpText>
    <label>Pref Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>