unpackaged/main/default/objects/Contact/fields/Previous_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Previous_Bankruptcy__c</fullName>
    <label>Previous Bankruptcy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>