unpackaged/main/default/objects/Contact/fields/Previous_Report__c.field-meta.xml
<CustomField>
    <fullName>Previous_Report__c</fullName>
    <formula>Related_Credit_Score__r.Previous_Report_Link__c</formula>
    <label>Previous Report</label>
    <type>Text</type>
</CustomField>