unpackaged/main/default/objects/Contact/fields/QB_Marketing_Cloud_Sync__c.field-meta.xml
<CustomField>
    <fullName>QB_Marketing_Cloud_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated via sync from Marketing Cloud specifically for QB branded material</description>
    <label>QB Marketing Cloud Sync</label>
    <type>Checkbox</type>
</CustomField>