unpackaged/main/default/objects/Contact/fields/Referral_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Referral_Value_1__c</fullName>
    <label>Referral Value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>