unpackaged/main/default/objects/Contact/fields/Related_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Related_Credit_Score__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Credit Score</label>
    <referenceTo>Credit_Score__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>