unpackaged/main/default/objects/Contact/fields/Revolving_Available_Percent__c.field-meta.xml
<CustomField>
    <fullName>Revolving_Available_Percent__c</fullName>
    <label>Revolving Available (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>