unpackaged/main/default/objects/Contact/fields/Revolving_Balance__c.field-meta.xml
<CustomField>
    <fullName>Revolving_Balance__c</fullName>
    <label>Revolving Balance ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>