unpackaged/main/default/objects/Contact/fields/Self_Reported_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Self_Reported_Credit_Rating__c</fullName>
    <description>Reported by the customer while going through the frontend web form. If values are being added to this picklist, they also need to be added to the Customer Form field</description>
    <label>Self Reported Credit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>