unpackaged/main/default/objects/Contact/fields/Self_Reported_Credit_Score_Range__c.field-meta.xml
<CustomField>
    <fullName>Self_Reported_Credit_Score_Range__c</fullName>
    <description>Created to hold both the bucket selected and the FICO range configured for the bucket. This field is being added because the business would like to see the range configured to the bucket at the time the contact went through the online webform</description>
    <label>Self Reported Credit Score Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>